--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -300,6 +300,26 @@
         android:id="@+id/serialPutawayDetailLocationFragment"
         android:name="com.example.warehousemanagment.ui.fragment.SerialPutawayDetailLocationFragment"
         android:label="SerialPutawayDetailLocationFragment" />
+    <fragment
+        android:id="@+id/serialPickingListFragment"
+        android:name="com.example.warehousemanagment.ui.fragment.SerialPickingListFragment"
+        android:label="SerialPickingListFragment" >
+        <action
+            android:id="@+id/action_serialPickingListFragment_to_serialPickingDetailFragment"
+            app:destination="@id/serialPickingDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/serialPickingDetailFragment"
+        android:name="com.example.warehousemanagment.ui.fragment.SerialPickingDetailFragment"
+        android:label="SerialPickingDetailFragment" >
+        <action
+            android:id="@+id/action_serialPickingDetailFragment_to_serialPickingScanFragment"
+            app:destination="@id/serialPickingScanFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/serialPickingScanFragment"
+        android:name="com.example.warehousemanagment.ui.fragment.SerialPickingScanFragment"
+        android:label="SerialPickingScanFragment" />
 
 
 </navigation>
