--- a/app/src/main/res/layout/pattern_serial_putaway_location.xml
+++ b/app/src/main/res/layout/pattern_serial_putaway_location.xml
@@ -33,7 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/_20sdp"
-            android:background="@color/mainYellow"
+            android:background="@drawable/shape_40_helf_2"
+            android:backgroundTint="@color/mainYellow"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/rel1"
             android:gravity="center"
