--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -25,7 +25,7 @@
 
         <TextView
             android:id="@+id/profileName"
-            style="@style/desktop_tv"
+            style="@style/drawer_tv"
             android:layout_below="@+id/profileImg"
             android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/padding_all"
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/wareHouseName"
-            style="@style/desktop_tv"
+            style="@style/drawer_tv"
             android:layout_below="@+id/profileName"
             android:layout_marginTop="@dimen/marginTop5ForLayouts"
             android:layout_alignParentStart="true"
