--- a/app/src/main/res/layout/fragment_serial_picking_scan.xml
+++ b/app/src/main/res/layout/fragment_serial_picking_scan.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/pickingItem"
                 layout="@layout/pattern_picking_detail_header"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_150sdp"
                 android:layout_below="@+id/mainToolbar"
                 android:layout_marginTop="@dimen/marginTopRelInfoTv" />
 
