--- a/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
+++ b/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
@@ -1,28 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:background="@drawable/shape_background_rect_border_gray_solid_white"
-        android:padding="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_5sdp"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:background="@drawable/shape_background_rect_white_6"
+            android:padding="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:elevation="@dimen/lowElevation"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/padding_headers_startEnd"
-            android:layout_marginEnd="@dimen/padding_headers_startEnd"
-            android:fontFamily="@font/medium"
-            android:text="@string/tools_205QWZC16766"
-            android:textColor="@color/gray70"
-            android:textSize="@dimen/pattern_serial_Font" />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:textAlignment="textStart"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="@dimen/padding_headers_startEnd"
+                android:layout_marginEnd="@dimen/padding_headers_startEnd"
+                android:fontFamily="@font/medium"
+                android:text="@string/tools_205QWZC16766"
+                android:textColor="@color/gray70"
+                android:textSize="@dimen/pattern_serial_Font" />
 
 
 
 
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
