--- a/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
+++ b/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
@@ -7,6 +7,7 @@
             android:layout_width="match_parent"
             android:background="@drawable/shape_background_rect_white_6"
             android:padding="@dimen/_5sdp"
+            android:id="@+id/layout"
             android:layout_marginBottom="@dimen/_5sdp"
             android:elevation="@dimen/lowElevation"
             android:layout_height="wrap_content">
