--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
     <color name="progressYellow">#DAC614</color>
     <color name="pink">#F89797</color>
     <color name="lowPink">#F5C9C9</color>
+    <color name="darkBlue">#205375</color>
 
 
 </resources>
