--- a/app/src/main/res/layout/pattern_picking_detail_header.xml
+++ b/app/src/main/res/layout/pattern_picking_detail_header.xml
@@ -1,102 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <RelativeLayout
-        android:background="@drawable/shape_background_rect_white_6"
-        android:layout_width="match_parent"
-        android:layout_marginBottom="@dimen/marginTop_flag"
-        android:elevation="@dimen/lowElevation"
-        android:padding="@dimen/padding_pattern_receive"
-        android:layout_height="@dimen/_150sdp">
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/marginTop_flag">
         <RelativeLayout
-            android:id="@id/rel1"
-            android:layout_width="@dimen/rel1PickingDetailPatternWidth"
+            android:background="@drawable/shape_background_rect_white_6"
+            android:layout_width="match_parent"
+            android:elevation="@dimen/lowElevation"
+            android:padding="@dimen/_5sdp"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv1"
-                style="@style/pattern_putaway_smallTv"
-                android:layout_alignStart="@+id/productTitle"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="center"
-                android:text="@string/product_title" />
-
-            <TextView
-                android:id="@+id/productTitle"
-                style="@style/pattern_receieve_tv1"
-                android:layout_below="@+id/tv1"
-                android:layout_width="match_parent"
-                android:gravity="left"
-                android:text="@string/tools_a220820_023535"
-                />
-
-
-            <TextView
-                android:id="@+id/tv2"
-                style="@style/pattern_putaway_smallTv"
-                android:layout_below="@+id/productTitle"
-                android:layout_alignStart="@+id/productTitle"
-                android:layout_gravity="center"
-                android:text="@string/product_code" />
-
-            <TextView
-                android:id="@+id/productCode"
-                style="@style/pattern_receieve_tv1"
-                android:layout_below="@id/tv2"
-                android:text="@string/tools_tdru4204745"  />
-
-
             <RelativeLayout
-                android:layout_below="@id/productCode"
-                android:layout_alignStart="@+id/productTitle"
-                android:layout_width="match_parent"
+                android:id="@id/rel1"
+                android:layout_width="@dimen/rel1PickingDetailPatternWidth"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/tv1"
+                    style="@style/pattern_putaway_smallTv"
+                    android:layout_alignStart="@+id/productTitle"
+                    android:layout_alignParentTop="true"
+                    android:layout_gravity="center"
+                    android:text="@string/product_title" />
+
+                <TextView
+                    android:id="@+id/productTitle"
+                    style="@style/pattern_receieve_tv1"
+                    android:layout_below="@+id/tv1"
+                    android:layout_width="match_parent"
+                    android:gravity="left"
+                    android:text="@string/tools_a220820_023535"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv2"
+                    style="@style/pattern_putaway_smallTv"
+                    android:layout_below="@+id/productTitle"
+                    android:layout_alignStart="@+id/productTitle"
+                    android:layout_gravity="center"
+                    android:text="@string/product_code" />
+
+                <TextView
+                    android:id="@+id/productCode"
+                    style="@style/pattern_receieve_tv1"
+                    android:layout_below="@id/tv2"
+                    android:text="@string/tools_tdru4204745"  />
+
+
                 <RelativeLayout
-                    android:id="@+id/rel3"
-                    android:layout_width="wrap_content"
+                    android:layout_below="@id/productCode"
+                    android:layout_alignStart="@+id/productTitle"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/tv3"
-                        style="@style/pattern_putaway_smallTv"
-                        android:layout_gravity="center"
-                        android:text="@string/invType" />
+                    <RelativeLayout
+                        android:id="@+id/rel3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv3"
+                            style="@style/pattern_putaway_smallTv"
+                            android:layout_gravity="center"
+                            android:text="@string/invType" />
 
 
-                    <TextView
-                        android:id="@+id/invTypeTitle"
-                        style="@style/pattern_receieve_tv1"
-                        android:layout_below="@id/tv3"
-                        android:layout_marginStart="0dp"
-                        android:text="@string/tools_tdru4204745" />
+                        <TextView
+                            android:id="@+id/invTypeTitle"
+                            style="@style/pattern_receieve_tv1"
+                            android:layout_below="@id/tv3"
+                            android:layout_marginStart="0dp"
+                            android:text="@string/tools_tdru4204745" />
+
+                    </RelativeLayout>
+
+
+
+
 
                 </RelativeLayout>
 
 
-                <RelativeLayout
-                    android:id="@+id/rel4"
-                    android:layout_marginStart="@dimen/margin20"
-                    android:layout_toEndOf="@id/rel3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/tv4"
-                        style="@style/pattern_putaway_smallTv"
-                        android:layout_gravity="center"
-                        android:text="@string/owner" />
-
-
-                    <TextView
-                        android:id="@+id/ownerCode"
-                        style="@style/pattern_receieve_tv1"
-                        android:layout_below="@id/tv4"
-                        android:layout_marginStart="0dp"
-                        android:text="@string/tools_tdru4204745" />
-
-                </RelativeLayout>
 
 
 
@@ -104,85 +91,116 @@
             </RelativeLayout>
 
 
+            <View
+                android:id="@+id/view"
+                android:background="@color/grayCB"
+                android:layout_toEndOf="@+id/rel1"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_alignTop="@id/rel1"
+                android:layout_alignBottom="@id/rel2"
+                android:layout_height="wrap_content"/>
 
 
-
-
-        </RelativeLayout>
-
-
-        <View
-            android:id="@+id/view"
-            android:background="@color/grayCB"
-            android:layout_toEndOf="@+id/rel1"
-            android:layout_width="@dimen/_1sdp"
-            android:layout_alignTop="@id/rel1"
-            android:layout_alignBottom="@id/rel1"
-            android:layout_height="0dp"/>
-
-
-        <RelativeLayout
-            android:id="@+id/rel2"
-            android:layout_toEndOf="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/rel1"
-            android:layout_centerHorizontal="true">
-            <TextView
-
-                android:id="@+id/pickingDetail"
-                style="@style/pattern_receieve_tv1"
-                android:layout_alignParentTop="true"
-                android:visibility="gone"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="0dp"
-                android:text="@string/tools_tdru4204745" />
-            <TextView
-
-                android:id="@+id/driverFullName"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/rel2"
+                android:layout_toEndOf="@+id/view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/pattern_receive_fontSize1"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/pickingDetail"
-                android:textColor="@color/black"
-                tools:text="@string/tools_mohammadShahiari" />
-            <RelativeLayout
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_height="wrap_content">
+                android:layout_centerHorizontal="true">
                 <TextView
-                    android:id="@+id/tv6"
-                    style="@style/pattern_receieve_tv1"
-                    android:layout_marginStart="0dp"
-                    android:text="@string/quantity_"
-                    android:textColor="@color/black" />
+                    android:id="@+id/tv4"
+                    style="@style/pattern_putaway_smallTv"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_gravity="center"
+                    android:text="@string/location_code" />
 
                 <TextView
-                    android:id="@+id/quantity"
+                    android:id="@+id/locationCode"
                     style="@style/pattern_receieve_tv1"
-                    android:layout_toEndOf="@+id/tv6"
-                    android:textColor="@color/mainYellow"
-                    android:gravity="start"
-                    tools:text="10" />
+                    android:layout_below="@+id/tv4"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:text="@string/tools_a220820_023535"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv5"
+                    style="@style/pattern_putaway_smallTv"
+                    android:layout_below="@+id/locationCode"
+                    android:layout_centerHorizontal="true"
+                    android:text="Shipping Number" />
+
+                <TextView
+                    android:id="@+id/shippingArea"
+                    style="@style/pattern_receieve_tv1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/tv5"
+                    android:text="@string/tools_tdru4204745"  />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/shippingArea"
+                    android:layout_margin="@dimen/_10sdp">
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingVertical="@dimen/_7sdp"
+                        android:orientation="vertical"
+                        android:background="@drawable/shape_background_rect_white_6_half"
+                        android:backgroundTint="@color/mainYellow"
+                        android:gravity="center"
+                        android:paddingHorizontal="@dimen/_4sdp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:id="@+id/quantity"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            android:textSize="@dimen/pattern_putaway_detail_MediumFont"
+                            android:text="@string/_5"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingVertical="@dimen/_7sdp"
+                        android:orientation="vertical"
+                        android:background="@drawable/shap_rect_half_right"
+                        android:backgroundTint="@color/darkBlue"
+                        android:gravity="center"
+                        android:paddingHorizontal="@dimen/_4sdp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:id="@+id/scan"
+                            android:textStyle="bold"
+                            android:textSize="@dimen/pattern_putaway_detail_MediumFont"
+                            android:text="@string/_5"/>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </LinearLayout>
+
+
+
 
             </RelativeLayout>
 
 
 
 
+            <ProgressBar
+                android:id="@+id/progress"
+                tools:visibility="gone"
+                android:padding="@dimen/paddingOfDetailProgressBar"
+                style="@style/progressStyle" />
+
         </RelativeLayout>
-
-
-
-
-        <ProgressBar
-            android:id="@+id/progress"
-            tools:visibility="gone"
-            android:padding="@dimen/paddingOfDetailProgressBar"
-            style="@style/progressStyle" />
-
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
