--- a/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
+++ b/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <androidx.appcompat.widget.LinearLayoutCompat
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/_5sdp">
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:background="@drawable/shape_background_rect_white_6"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_weight="1"
+            android:background="@drawable/shape_background_rect_white_6_half"
             android:padding="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/layout"
-            android:layout_marginBottom="@dimen/_5sdp"
+            app:layout_constraintTop_toTopOf="@id/tick"
+            app:layout_constraintEnd_toStartOf="@id/tick"
+            app:layout_constraintBottom_toBottomOf="@id/tick"
             android:elevation="@dimen/lowElevation"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:textAlignment="textStart"
-                android:layout_alignParentEnd="true"
                 android:layout_marginStart="@dimen/padding_headers_startEnd"
                 android:layout_marginEnd="@dimen/padding_headers_startEnd"
                 android:fontFamily="@font/medium"
@@ -27,10 +32,25 @@
                 android:textColor="@color/gray70"
                 android:textSize="@dimen/pattern_serial_Font" />
 
-
-
-
-
         </RelativeLayout>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="@dimen/_4sdp"
+            android:id="@+id/tick"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:background="@drawable/shap_rect_half_right"
+            android:backgroundTint="@color/green">
+
+            <ImageView
+                android:layout_width="@dimen/_21sdp"
+                android:layout_height="@dimen/_21sdp"
+                android:src="@drawable/tick_square"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
