--- a/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
+++ b/app/src/main/res/layout/pattern_serial_picking_detail_scan.xml
@@ -6,21 +6,19 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/_5sdp">
         <RelativeLayout
-            android:layout_width="0dp"
-            app:layout_constraintHorizontal_weight="1"
-            android:background="@drawable/shape_background_rect_white_6_half"
+            android:layout_width="match_parent"
+            android:background="@drawable/shape_background_rect_white_6"
             android:padding="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/layout"
             app:layout_constraintTop_toTopOf="@id/tick"
-            app:layout_constraintEnd_toStartOf="@id/tick"
             app:layout_constraintBottom_toBottomOf="@id/tick"
             android:elevation="@dimen/lowElevation"
             android:layout_height="0dp">
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
@@ -39,12 +37,13 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="@dimen/_4sdp"
+            android:elevation="@dimen/lowElevation"
             android:id="@+id/tick"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
 
             android:background="@drawable/shap_rect_half_right"
-            android:backgroundTint="@color/green">
+            >
 
             <ImageView
                 android:layout_width="@dimen/_21sdp"
