--- a/app/src/main/res/layout/pattern_serial_cancel.xml
+++ b/app/src/main/res/layout/pattern_serial_cancel.xml
@@ -7,12 +7,12 @@
         android:paddingBottom="@dimen/_5sdp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:background="@drawable/shape_background_rect_white_6"
-            android:padding="@dimen/_5sdp"
+            android:background="@drawable/shape_background_rect_border_gray_solid_white"
+            android:padding="@dimen/_3sdp"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/layout"
-            app:layout_constraintTop_toTopOf="@id/tick"
-            app:layout_constraintBottom_toBottomOf="@id/tick"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:elevation="@dimen/lowElevation"
             android:layout_height="0dp">
 
@@ -36,18 +36,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/_1sdp"
             android:padding="@dimen/_4sdp"
             android:elevation="@dimen/lowElevation"
             android:id="@+id/tick"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/layout"
+            app:layout_constraintBottom_toBottomOf="@id/layout"
             android:background="@drawable/shap_rect_half_right"
             >
 
             <ImageView
-                android:layout_width="@dimen/_21sdp"
-                android:layout_height="@dimen/_21sdp"
-                android:src="@drawable/tick_square"/>
+                android:layout_width="@dimen/_19sdp"
+                android:layout_height="@dimen/_19sdp"
+                android:src="@drawable/close_square"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.constraintlayout.widget.ConstraintLayout>
