--- a/app/src/main/res/layout/pattern_serial_cancel.xml
+++ b/app/src/main/res/layout/pattern_serial_cancel.xml
@@ -37,9 +37,10 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="@dimen/_1sdp"
-            android:padding="@dimen/_4sdp"
+            android:padding="@dimen/_3sdp"
             android:elevation="@dimen/lowElevation"
-            android:id="@+id/tick"
+            android:backgroundTint="@color/red"
+            android:id="@+id/remove"
             app:layout_constraintTop_toTopOf="@id/layout"
             app:layout_constraintBottom_toBottomOf="@id/layout"
             android:background="@drawable/shap_rect_half_right"
