add serial location transfer

--- a/app/src/main/res/layout/layout_transfer_top_info.xml
+++ b/app/src/main/res/layout/layout_transfer_top_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -66,10 +66,25 @@
                 android:inputType="number" />
 
             <ImageView
+                android:layout_width="@dimen/_14sdp"
+                android:layout_height="@dimen/_14sdp"
                 android:id="@+id/clearImg"
-                style="@style/imgClose"
-                android:layout_marginEnd="@dimen/clearImgMarginEnd"
-                android:elevation="@dimen/clearImgElevation" />
+                android:layout_toStartOf="@id/scan_barcode"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:elevation="@dimen/clearImgElevation"
+                android:src="@drawable/ic_layer1"/>
+            <ImageView
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:elevation="@dimen/clearImgElevation"
+                android:src="@drawable/scan_barcode"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:id="@+id/scan_barcode"
+                app:tint="@color/darkBlue"/>
+
 
         </RelativeLayout>
 
