--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -321,6 +321,20 @@
                         android:text="@string/locationTransfer" />
 
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/linSerialLocationTransfer"
+                    style="@style/drawer_sub_rel"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        style="@style/drawer_sub_img"
+                        android:background="@drawable/shape_circle_white_drawer" />
+
+                    <TextView
+                        style="@style/drawer_sub_tv"
+                        android:text="@string/serial_location_transfer" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/linTransferTask"
