--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -312,6 +312,10 @@
         android:id="@+id/serialPickingScanFragment"
         android:name="com.example.warehousemanagment.ui.fragment.SerialPickingScanFragment"
         android:label="SerialPickingScanFragment" />
+    <fragment
+        android:id="@+id/serialLocationTransferFragment"
+        android:name="com.example.warehousemanagment.ui.fragment.SerialLocationTransferFragment"
+        android:label="SerialLocationTransferFragment" />
 
 
 </navigation>
