--- a/app/src/main/res/layout/pattern_serial_cancel.xml
+++ b/app/src/main/res/layout/pattern_serial_cancel.xml
@@ -7,13 +7,13 @@
         android:paddingBottom="@dimen/_5sdp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:background="@drawable/shape_background_rect_border_gray_solid_white"
+            android:background="@drawable/shape_background_rect_white_6"
             android:padding="@dimen/_3sdp"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/layout"
+            android:backgroundTint="#1FFF1F1F"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:elevation="@dimen/lowElevation"
             android:layout_height="0dp">
 
             <TextView
@@ -36,7 +36,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="@dimen/_1sdp"
             android:padding="@dimen/_3sdp"
             android:elevation="@dimen/lowElevation"
             android:backgroundTint="@color/red"
